assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
/*--------------------------------------------Colours*/

body {
    background-color: #dfe7ee;
}

.col-heading {
    margin-left: 40px;
    margin-right: 40px;
}

.inline-block {
    color: #af9442;
}

.section-details {
    background-color: #dffcff;
    border-color:#8913b0;
}

.bg-color-contact {
    background-color: #143049;
}

.contact-color {
    color: #4203bf;
}

.foot-email a {
    color: #000000;
    font-weight: 700;
}

.list-inline-item {
    margin-bottom: 20px;
}

/* ----------------------------------------Special paddings/margins/text */

h1,
h2,
h3,
h4 {
    margin: 0;
    font-family: 'Inclusive+Sans', sans-serif;
}

h2 {
    text-align: center;
}

p {
    font-family: 'Open+Sans', sans-serif;
    margin: 10px;
    font-size: 14px;
    color:#4203bf;
    font-weight: 600;
}

.uppercase {
    text-transform: uppercase;
}

.solid-border {
    border-style: solid;
    border-width: 2px 0 0;
    padding-left: 15px;
    padding-right: 15px;
    border-color:#8913b0;
}

.button-border {
    border: 3px solid #8913b0;
    border-radius: 0 0 5% 5%;
}

.bigger-font {
    font-size: 40px;
    color: #f9c8c8;
    /* color: #ed4c4c; */
}

.blue-text {
    color:#4203bf;
    font-weight: 600;
}

.purple-text {
    color: #93102d !important;
}

.indent-para {
    padding-left: 40px;
}

ul.myth > li {
    margin-left: 40px;
}

li {
    margin-right: 20px;
}

.content-hidden {
    display: none;
}

/*--------------------------------------------Heading*/

#header-details {
     text-align: center;
}

.error-screen-padding {
    padding-top: 50px;
}
 
/*--------------------------------------------Images*/

.logo-img {
    max-height: 150px;
    max-width: 150px;
}

.img {
    width: 100%;
    height: auto;
}

.img-reduce {
    width: 90%;
    height: auto;
}

.img-small {
    width: 30%;
    height: auto;
    }

.img-narrow {
    width: 50%;
    height: auto;
}

.img-myth {
    width: 55%;
    margin:auto;
    display: block;
}

/*--------------------------------------------Titles*/

.title {
    font-family: "Inclusive+Sans", sans-serif;
    font-size: 25px;
    font-weight: 700;
    margin-top: 10px;
    margin-bottom: 10px;
    color: #4203bf;
    text-align: center;
}

.sub-title {
    font-family: "Inclusive+Sans", sans-serif;
    font-weight: 800;
    font-size: 24px;
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: center;
    color: #4203bf;
}

.modal-text {
    font-family: "Inclusive+Sans", sans-serif;
    font-weight: 600;
    font-size: 20px;
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: center;
    color: #4203bf;
}

.foot-title {
    color: #4203bf;
    font-size: 22px;
    padding: 10px 0 0 0;
    text-align: center;
}

.center {
    margin: auto;
}

.center-content {
    text-align: center !important;
}

/*--------------------------------------------flip card (myth) code*/
.myth-card {
    background-color: #dffcff;
    width: 300px;
    height: 300px;
    padding: 30px;
    margin-left: 15px;
    margin-right: 15px;
  }
  
  .myth-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
  }

  /*--------------------------------------------updated from hover to mouse click via jQuery*/
  .myth-card-flipped .myth-card-inner {
    transform: rotateY(180deg);
  }
 
  .myth-card-front, .myth-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 10%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
  }
  
  .myth-card-front {
    background-color: #8913b0;
    background-position: center; 
    background-repeat: no-repeat;    
    color: #f0f0f0;
    border: 10px solid #2980b9;
  }
  
  .myth-card-back {
    background-color: #2980b9;
    color: white;
    border: 10px solid #8913b0;
    transform: rotateY(180deg);
  }

  .myth-card-text {
    font-size: 0.5rem;
    color: #f0f0f0;
}

/*--------------------------------------------quiz css code*/
.quizmain {
    display: none;
    background: #cbe6fd;
    width: 90%;
    max-width: 600px;
    margin: 0 auto 10%;
    border: solid 10px #8913b0;
    border-radius: 10px;
    padding: 25px;
}

.quizmain h1 {
    font-size: 25px;
    color: #4203bf;
    font-weight: 800;
}

.quizmain h2 {
    font-size: 25px;
    color: #4203bf;
    font-weight: 800;
    text-align: right;
}

.myquiz {
    padding: 20px 0;
}

.myquiz h2{
    font-size: 18px;
    color: #8913b0;
    font-weight: 600;
}

.myquiz h3 {
    font-size: 28px;
    color: #4203bf;
    font-weight: 600;
}

.quizBtn {
    background: #e5edf5;
    color: #222;
    font-weight: 700;
    width: 100%;
    border: 3px solid #8913b0;
    padding: 10px;
    margin: 10px 0;
    text-align: left;
    border-radius: 10px;
    cursor: pointer;
    transition: all 0.3s;
}

.quizBtn:hover:not([disabled]) {
    background: #222;
    color: #fff;
} 

.quizBtn:disabled {
    cursor: not-allowed;
}

#next-btn {
    background: #55076e;
    color: #fff;
    font-size:25px;
    font-weight: 500;
    width: 75%;
    border: 3px solid #8913b0;
    padding: 10px;
    margin: 20px auto 0;
    border-radius: 5%;
    cursor: pointer;
    display: none;
}

#quizTrigger {
    padding: 10px;
    margin: 50px 0 40px;

}

.correct {
    background: #028d3d;
}

.incorrect {
    background: #e11a1a;
}

.timerunningout {
    color: #e11a1a !important;
}

/*--------------------------------------------footer*/

footer {
    color: #fff;
    min-height: 120px;
}

.social-links {
    padding-left: 1em;
    padding-top: 1em;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 20px;
    line-height: 7px;
    text-align: center;
    color: #efe9d7;
    background: #474747;
    transition: all 0.35s ease-in-out;
}
/* ... */

